--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,2 +1,6 @@
 [item-name]
-monster-body=Monster body
+small-biter-body=Burnt Small Biter
+medium-biter-body=Burnt Medium Biter
+big-biter-body=Burnt Big Biter
+behemoth-biter-body=Burnt Behemoth Biter
+
