--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,6 +1,6 @@
 [item-name]
-small-biter-body=Burnt Small Biter
-medium-biter-body=Burnt Medium Biter
-big-biter-body=Burnt Big Biter
-behemoth-biter-body=Burnt Behemoth Biter
+small-biter-corpse-burnt=Burnt Small Biter
+medium-biter-corpse-burnt=Burnt Medium Biter
+big-biter-corpse-burnt=Burnt Big Biter
+behemoth-biter-corpse-burnt=Burnt Behemoth Biter
 
