Fixes, fuel update

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,16 +1,6 @@
 [item-name]
 monster-body=Monster body
-small-biter-corpse=Monster body
-medium-biter-corpse=Monster body
-big-biter-corpse=Monster body
-behemoth-biter-corpse=Monster body
-small-spitter-corpse=Monster body
-medium-spitter-corpse=Monster body
-big-spitter-corpse=Monster body
-behemoth-spitter-corpse=Monster body
-biter-spawner-corpse=Monster body
-spitter-spawner-corpse=Monster body
-small-worm-corpse=Monster body
-medium-worm-corpse=Monster body
-big-worm-corpse=Monster body
-behemoth-worm-corpse=Monster body
+monster-body-small=Small Monster Body
+monster-body-medium=Medium Monster Body
+monster-body-big=Big Monster Body
+monster-body-behemoth=Behemoth Monster Body
