Added recipe name

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -4,3 +4,6 @@ monster-body-small=Small Monster Body
 monster-body-medium=Medium Monster Body
 monster-body-big=Big Monster Body
 monster-body-behemoth=Behemoth Monster Body
+
+[recipe-name]
+biter-liquifaction=Convert behemoth monster bodies to heavy oil
