Fixed recipe name appearing correctly

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -6,4 +6,7 @@ monster-body-big=Big Monster Body
 monster-body-behemoth=Behemoth Monster Body
 
 [recipe-name]
-biter-liquifaction=Convert behemoth monster bodies to heavy oil
+biter-liquefaction=Convert behemoth monster bodies to heavy oil
+
+[recipe-description]
+biter-liquefaction=Using steam to slowly poach dead behemoth bodies you are able to extact a little bit of heavy oil
