Biter bodies recipes updated; icons, names and descriptions

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -7,6 +7,14 @@ monster-body-behemoth=Behemoth Monster Body
 
 [recipe-name]
 biter-liquefaction=Convert behemoth monster bodies to heavy oil
+monster-body-small=Coal from Small Biter
+monster-body-medium=Coal from Medium Biter
+monster-body-big=Coal from Big Biter
+monster-body-behemoth=Coal from Behemoth Biter
 
 [recipe-description]
 biter-liquefaction=Using steam to slowly poach dead behemoth bodies you are able to extact a little bit of heavy oil
+monster-body-small=Roast a body and get coal
+monster-body-medium=Roast a body and get coal
+monster-body-big=Roast a body and get coal
+monster-body-behemoth=Roast a body and get coal
