--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -18,3 +18,9 @@ monster-body-small=Roast a body and get coal
 monster-body-medium=Roast a body and get coal
 monster-body-big=Roast a body and get coal
 monster-body-behemoth=Roast a body and get coal
+
+[mod-setting-name]
+early_coal_liqification=Early Coal Liqification
+
+[mod-setting-description]
+early_coal_liqification=Moves Coal Liqification under "Checmical Science"
